<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tryout.app.brutto_netto_rechner.FormularActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_x="4dp"
        android:layout_y="0dp"
        android:text="@string/txt_anweisung" />

    <EditText
        android:id="@+id/edt_betrag"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_x="4dp"
        android:layout_y="64dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/rg_art"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_x="14dp"
        android:layout_y="124dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rb_art_netto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/txt_netto" />

        <RadioButton
            android:id="@+id/rb_art_brutto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_brutto" />
    </RadioGroup>

    <Spinner
        android:id="@+id/sp_umsatzsteuer"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="208dp"
        android:entries="@array/ust_anzeige"
        android:entryValues="@array/ust_werte" />

    <Button
        android:id="@+id/buttonBerechne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="12dp"
        android:layout_y="283dp"
        android:onClick="onClickBerechnen"
        android:text="@string/txt_berechnen" />

</AbsoluteLayout>
